make src a module

--- a/RunTests.ipynb
+++ b/RunTests.ipynb
@@ -41,22 +41,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================= test session starts ==============================\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.9.10, pytest-7.0.1, pluggy-1.0.0\n",
       "rootdir: /Users/lmoresi/+Github/EMSC-4033-2022-assignment\n",
       "plugins: anyio-3.4.0, typeguard-2.13.3\n",
-      "collected 1 item\n",
+      "collected 1 item                                                               \u001b[0m\n",
       "\n",
-      "tests/test_functions.py .                                                [100%]\n",
+      "tests/test_functions.py \u001b[31mF\u001b[0m\u001b[31m                                                [100%]\u001b[0m\n",
       "\n",
-      "============================== 1 passed in 0.01s ===============================\n"
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m______________________________ test_foo_function _______________________________\u001b[0m\n",
+      "\n",
+      "rtol = 1e-13\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_foo_function\u001b[39;49;00m(rtol=\u001b[94m1.e-13\u001b[39;49;00m):\n",
+      ">       result = foo_function(\u001b[94m4\u001b[39;49;00m) - \u001b[94m16\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       NameError: name 'foo_function' is not defined\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtests/test_functions.py\u001b[0m:5: NameError\n",
+      "=========================== short test summary info ============================\n",
+      "FAILED tests/test_functions.py::test_foo_function - NameError: name 'foo_func...\n",
+      "\u001b[31m============================== \u001b[31m\u001b[1m1 failed\u001b[0m\u001b[31m in 0.08s\u001b[0m\u001b[31m ===============================\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "%%sh\n",
-    "\n",
-    "pytest"
+    "! pytest"
    ]
   },
   {
