--- a/RunTests.ipynb
+++ b/RunTests.ipynb
@@ -47,21 +47,9 @@
       "plugins: anyio-3.4.0, typeguard-2.13.3\n",
       "collected 1 item                                                               \u001b[0m\n",
       "\n",
-      "tests/test_functions.py \u001b[31mF\u001b[0m\u001b[31m                                                [100%]\u001b[0m\n",
+      "tests/test_functions.py \u001b[32m.\u001b[0m\u001b[32m                                                [100%]\u001b[0m\n",
       "\n",
-      "=================================== FAILURES ===================================\n",
-      "\u001b[31m\u001b[1m______________________________ test_foo_function _______________________________\u001b[0m\n",
-      "\n",
-      "rtol = 1e-13\n",
-      "\n",
-      "    \u001b[94mdef\u001b[39;49;00m \u001b[92mtest_foo_function\u001b[39;49;00m(rtol=\u001b[94m1.e-13\u001b[39;49;00m):\n",
-      ">       result = foo_function(\u001b[94m4\u001b[39;49;00m) - \u001b[94m16\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       NameError: name 'foo_function' is not defined\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtests/test_functions.py\u001b[0m:5: NameError\n",
-      "=========================== short test summary info ============================\n",
-      "FAILED tests/test_functions.py::test_foo_function - NameError: name 'foo_func...\n",
-      "\u001b[31m============================== \u001b[31m\u001b[1m1 failed\u001b[0m\u001b[31m in 0.08s\u001b[0m\u001b[31m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -72,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "076d765c-7c00-40a0-b4f3-aeb6c7015836",
+   "id": "016f350e-1f57-4a99-867a-24692bbba922",
    "metadata": {},
    "outputs": [],
    "source": []
